# IdeaProjects

Haskell001/: Haskell001.cabal
Hello/src/com/company/: AppGraphInOut.java  DataFlow.java  HelloFrame.form  HelloFrame.java  Main.java
HelloKotlin/: build.gradle.kts
HelloKotlin/src/main/kotlin/: AMS.kt  Greeting.kt
HelloWorld/src/com/example/helloworld/: HelloWorld.java  HelloWorldTest.java  MoodAnalyser.java  MoodAnalyserTest.java
JavaInAction/src/com/dasheng/: Main.java
LiteNADemo/src/com/huawei/utils/: Constant.java
MyAndroidProject/app/: build.gradle
MyAndroidProject/app/src/main/: AndroidManifest.xml
MyAndroidProject/gradle/wrapper/: gradle-wrapper.properties
accessing-data-rest/: pom.xml
accessing-data-rest/src/main/java/com/example/accessingdatarest/: AccessingDataRestApplication.java  Person.java  PersonRepository.java
accessing-data-rest/src/test/java/com/example/accessingdatarest/: AccessingDataRestApplicationTests.java
accessingjpa/: pom.xml
accessingjpa/src/main/java/com/example/accessingjpa/: AccessingjpaApplication.java  Customer.java  CustomerRepository.java
consumingRest/: pom.xml
hallowelt/: pom.xml
hallowelt/src/main/resources/: application.properties
highlight_spring4/: pom.xml
relational-data-access/: pom.xml
restfulService/: pom.xml
scheduling-tasks/: pom.xml
spring-boot-hello/: pom.xml
spring-boot-hello/src/main/java/com/didispace/: HelloApplication.java
tdd_development/: settings.gradle
tut-rest-master/nonrest/src/main/java/payroll/: Employee.java
uploading-files/: pom.xml
(+36 files in other folders)
